--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,11 +7,11 @@
 # -------------------------------------
 
 cotes:
-  name: Cotes Chung
-  twitter: cotes2020
-  url: https://github.com/cotes2020/
+  name: Turing Yeoh
+  twitter: yeohvonchang
+  url: https://github.com/yeohvonchang/
 
 sille_bille:
   name: Dinesh Prasanth Moluguwan Krishnamoorthy
   twitter: dinesh_MKD
-  url: https://github.com/SilleBille/
+  url: https://github.com/yeohvonchang/
