--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: yeohvonchang
+  anonymity: 匿名
   email: yeohvonchang@163.com
   links:
     # The first element serves as the copyright owner's link
